updated requirements and procfile

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,124 +1,7 @@
 alembic==1.7.7
-anyio==3.6.1
-apilytics==1.6.0
-asgiref==3.5.0
-attrs==21.4.0
-bcrypt==3.1.4
-beautifulsoup4==4.11.1
-blinker==1.4
-Brotli==1.0.9
-bs4==0.0.1
-cachelib==0.6.0
-cachetools==5.0.0
-certifi==2021.10.8
-cffi==1.15.0
-chardet==4.0.0
-charset-normalizer==2.0.12
-clang==14.0
-click==8.0.4
-ConfigArgParse==1.5.3
-coverage==6.4.1
-cryptography==36.0.2
-cssselect==1.1.0
-cssutils==2.4.0
-cycler==0.11.0
-Django==4.0.3
-dnspython==2.2.1
-email-validator==1.2.1
-emails==0.6
 fastapi==0.78.0
-Flask==2.0.3
-Flask-BasicAuth==0.2.0
-Flask-Bcrypt==0.7.1
-Flask-Cors==3.0.10
-Flask-Login==0.5.0
-Flask-Mail==0.9.1
-Flask-Migrate==3.1.0
-Flask-Session==0.4.0
-Flask-Share==0.1.1
-Flask-SQLAlchemy==2.5.1
-Flask-WTF==0.14.2
-fonttools==4.32.0
-gallery-dl==1.22.1
-gevent==21.12.0
-geventhttpclient==1.5.3
-greenlet==1.1.2
-gunicorn==20.1.0
-h11==0.13.0
-httptools==0.4.0
-idna==3.3
-image==1.5.33
-iniconfig==1.1.1
-itsdangerous==2.1.0
-Jinja2==3.0.3
-joblib==1.1.0
-kiwisolver==1.4.2
-locust==2.8.4
-lxml==4.8.0
-Mako==1.2.0
-Markdown==3.3.7
-MarkupSafe==2.1.0
-matplotlib==3.5.1
-msgpack==1.0.3
-mysql-connector-python==8.0.28
-mysql-connector-python-rf==2.2.2
-nltk==3.7
-numpy==1.22.3
+numpy==1.23.0
+turtle==0.0.2
 opencv-python==4.6.0.66
-orjson==3.7.2
-packaging==21.3
-pandas==1.4.2
-phonenumbers==8.12.45
-Pillow==9.0.1
-playwright==1.22.0
-pluggy==1.0.0
-premailer==3.10.0
-protobuf==3.19.4
-psutil==5.9.0
-py==1.11.0
-pycparser==2.21
-pydantic==1.9.1
-pyee==8.1.0
-PyJWT==2.3.0
-PyMySQL==1.0.2
-pyparsing==3.0.8
-pytest==7.1.2
-python-dateutil==2.8.2
-python-dotenv==0.20.0
-python-http-client==3.3.7
-python-multipart==0.0.5
-pytz==2022.1
-PyYAML==6.0
-pyzbar==0.1.9
-pyzmq==22.3.0
-qrcode==7.3.1
-regex==2022.4.24
-requests==2.27.1
-roundrobin==0.0.2
-sendgrid==6.9.7
-six==1.11.0
-sniffio==1.2.0
-soupsieve==2.3.2.post1
-SQLAlchemy==1.4.32
-sqlparse==0.4.2
-starkbank-ecdsa==2.0.3
-starlette==0.19.1
-stop-words==2018.7.23
-termcolor==1.1.0
-tomli==2.0.1
-torch==1.11.0
-torchvision==0.12.0
-tqdm==4.64.0
-twilio==7.8.0
-typing_extensions==4.1.1
-ujson==5.3.0
-URLEncoder==1.1
-urllib3==1.26.8
-uvicorn==0.17.6
-uvloop==0.16.0
-watchgod==0.8.2
-websockets==10.1
-Werkzeug==2.0.0
-WTForms==2.1
-zope.event==4.5.0
-zope.interface==5.4.0
+uvicorn==0.18.1
+gunicorn==20.1.0
