--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ alembic==1.7.7
 fastapi==0.78.0
 uvicorn==0.18.1
 gunicorn==20.1.0
+opencv-python-headless
+
 #For YOLOV5 this whl is much smaller +- 80MB versus the 700 MB full torch package
 pandas>=1.1.4
 
