--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ fastapi==0.78.0
 uvicorn==0.18.1
 gunicorn==20.1.0
 opencv-python-headless
-
+requests
 #For YOLOV5 this whl is much smaller +- 80MB versus the 700 MB full torch package
 pandas>=1.1.4
 
