--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ opencv-python-headless
 requests
 #For YOLOV5 this whl is much smaller +- 80MB versus the 700 MB full torch package
 pandas>=1.1.4
+pyyaml
 
 --find-links https://download.pytorch.org/whl/torch_stable.html
 
