--- a/requirements.txt
+++ b/requirements.txt
@@ -7,10 +7,11 @@ requests
 #For YOLOV5 this whl is much smaller +- 80MB versus the 700 MB full torch package
 pandas>=1.1.4
 pyyaml
+numpy
 
 --find-links https://download.pytorch.org/whl/torch_stable.html
 
-torch==1.7.1+cpu
+torch==1.11.0+cpu
 torchvision==0.2.2
 
 jinja2
