--- a/requirements.txt
+++ b/requirements.txt
@@ -9,8 +9,8 @@ pandas>=1.1.4
 pyyaml
 numpy
 
--f https://download.pytorch.org/whl/torch_stable.html
-torch==1.11.1+cpu 
+--find-links https://download.pytorch.org/whl/torch_stable.html
+torch==1.11.0+cpu
 torchvision==0.2.2
 
 jinja2
