added other YoloV5 requirements

--- a/requirements.txt
+++ b/requirements.txt
@@ -6,13 +6,23 @@ opencv-python-headless
 requests
 #For YOLOV5 this whl is much smaller +- 80MB versus the 700 MB full torch package
 pandas>=1.1.4
-pyyaml
-numpy
+
 
 --find-links https://download.pytorch.org/whl/torch_stable.html
 torch==1.11.0+cpu
-torchvision==0.2.2
 
 jinja2
 python-multipart
 apilytics
+
+# Base for YoloV5----------------------------------------
+matplotlib>=3.2.2
+numpy>=1.18.5
+opencv-python>=4.1.1
+Pillow>=7.1.2
+PyYAML>=5.3.1
+requests>=2.23.0
+scipy>=1.4.1
+torchvision>=0.8.1
+tqdm>=4.64.0
+protobuf<=3.20.1  # https://github.com/ultralytics/yolov5/issues/8012
