--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 alembic==1.7.7
 fastapi==0.78.0
 numpy==1.23.0
+#Special version of CV2 that runs headless like my app
 opencv-python-headless
 uvicorn==0.18.1
 gunicorn==20.1.0
