--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ pandas>=1.1.4
 #For YOLOV5 this whl is much smaller +- 80MB versus the 700 MB full torch package
 --find-links https://download.pytorch.org/whl/torch_stable.html
 torch==1.11.0+cpu
+seaborn
 
 # Base for YoloV5----------------------------------------
 matplotlib>=3.2.2
