--- a/requirements.txt
+++ b/requirements.txt
@@ -5,9 +5,6 @@ numpy==1.23.0
 opencv-python-headless
 uvicorn==0.18.1
 gunicorn==20.1.0
-jinja2
-python-multipart
-apilytics
 pandas>=1.1.4
 
 #For YOLOV5 this whl is much smaller +- 80MB versus the 700 MB full torch package
@@ -22,6 +19,6 @@ Pillow>=7.1.2
 PyYAML>=5.3.1
 requests>=2.23.0
 scipy>=1.4.1
-torchvision>=0.8.1
+torchvision== 0.13.0
 tqdm>=4.64.0
 protobuf<=3.20.1  # https://github.com/ultralytics/yolov5/issues/8012
