--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 alembic==1.7.7
 fastapi==0.78.0
-numpy==1.23.0
+
 #Special version of CV2 that runs headless like my app
 opencv-python-headless
 uvicorn==0.18.1
@@ -8,21 +8,46 @@ gunicorn==20.1.0
 pandas>=1.1.4
 python-multipart
 
+# YOLOv5 requirements
+# Usage: pip install -r requirements.txt
 
-#For YOLOV5 this whl is much smaller +- 80MB versus the 700 MB full torch package
---find-links https://download.pytorch.org/whl/torch_stable.html
-torch==1.11.0+cpu
-seaborn
-
-# Base for YoloV5----------------------------------------
+# Base ----------------------------------------
 matplotlib>=3.2.2
 numpy>=1.18.5
+opencv-python>=4.1.1
 Pillow>=7.1.2
 PyYAML>=5.3.1
 requests>=2.23.0
 scipy>=1.4.1
-torchvision== 0.12.0
+torch>=1.7.0
+torchvision>=0.8.1
 tqdm>=4.64.0
-ipython==8.4.0
-psutil==5.9.1
 protobuf<=3.20.1  # https://github.com/ultralytics/yolov5/issues/8012
+
+# Logging -------------------------------------
+tensorboard>=2.4.1
+# wandb
+# clearml
+
+# Plotting ------------------------------------
+pandas>=1.1.4
+seaborn>=0.11.0
+
+# Export --------------------------------------
+# coremltools>=5.2  # CoreML export
+# onnx>=1.9.0  # ONNX export
+# onnx-simplifier>=0.4.1  # ONNX simplifier
+# nvidia-pyindex  # TensorRT export
+# nvidia-tensorrt  # TensorRT export
+# scikit-learn==0.19.2  # CoreML quantization
+# tensorflow>=2.4.1  # TFLite export (or tensorflow-cpu, tensorflow-aarch64)
+# tensorflowjs>=3.9.0  # TF.js export
+# openvino-dev  # OpenVINO export
+
+# Extras --------------------------------------
+ipython  # interactive notebook
+psutil  # system utilization
+thop>=0.1.1  # FLOPs computation
+# albumentations>=1.0.3
+# pycocotools>=2.0  # COCO mAP
+# roboflow
