--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -10,16 +10,16 @@ env:
 jobs:
           
   buildingimage:
-    name: Building container image
+    name: 🚀 Launching new version...
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
+      - name: 🖨 Reading the code Peter has written
         uses: actions/checkout@v2
       - name: Install Utilities
         run: |
           sudo apt-get update
           sudo apt-get install -y jq unzip
-      - name: Install AWS Client
+      - name: 🛠 Install AWS Lightsail Client
         run: |
           curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
           unzip awscliv2.zip
@@ -28,16 +28,16 @@ jobs:
           curl "https://s3.us-west-2.amazonaws.com/lightsailctl/latest/linux-amd64/lightsailctl" -o "lightsailctl"
           sudo mv "lightsailctl" "/usr/local/bin/lightsailctl"
           sudo chmod +x /usr/local/bin/lightsailctl
-      - name: Configure AWS credentials
+      - name: 🤐 Log in to AWS Lightsail with Secrets
         uses: aws-actions/configure-aws-credentials@v1
         with:
           aws-region: ${{ env.AWS_REGION }}
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         
-      - name: Build Docker Image
+      - name: 🐳 Create Docker Container
         run: docker build -t photoscavenger:latest .
-      - name: Push image to container register
+      - name: 📬 Upload container image to AWS container register
         run: |
           service_name=${{ env.AWS_LIGHTSAIL_SERVICE_NAME }}
           aws lightsail push-container-image \
@@ -46,7 +46,7 @@ jobs:
             --label ${service_name} \
             --image ${service_name}:latest
 
-      - name: Deploying app to production
+      - name: 🚀 Deploying the container to the  ${{ env.AWS_REGION }} datacenter
         run: |
           aws lightsail create-container-service-deployment --service-name photoscavenger \
             --containers file://AWS/deploymentconfig.json \
