--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -13,13 +13,13 @@ jobs:
     name: 🚀 Launching new version...
     runs-on: ubuntu-latest
     steps:
-      - name: 🖨 Reading the code Peter has written
+      - name: 🗂 Getting all the code Peter has written
         uses: actions/checkout@v2
-      - name: Install Utilities
+      - name: ⚙️ Updating to the latest versions
         run: |
           sudo apt-get update
           sudo apt-get install -y jq unzip
-      - name: 🛠 Install AWS Lightsail Client
+      - name: 🏢 Install Amazon Client
         run: |
           curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
           unzip awscliv2.zip
@@ -35,7 +35,7 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         
-      - name: 🐳 Create Docker Container
+      - name: 🐳 Create a Docker Container
         run: docker build -t photoscavenger:latest .
       - name: 📬 Upload container image to AWS container register
         run: |
@@ -46,7 +46,7 @@ jobs:
             --label ${service_name} \
             --image ${service_name}:latest
 
-      - name: 🚀 Deploying the container to the  ${{ env.AWS_REGION }} datacenter
+      - name: 🚀 Deploying the container to the Amazon datacenter
         run: |
           aws lightsail create-container-service-deployment --service-name photoscavenger \
             --containers file://AWS/deploymentconfig.json \
