--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ gunicorn==20.1.0
 pandas>=1.1.4
 python-multipart
 apilytics==1.6.0
+Jinja2==3.1.2
 
 # YOLOv5 requirements
 # Usage: pip install -r requirements.txt
