--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ gunicorn==20.1.0
 pandas>=1.1.4
 python-multipart
 Jinja2==3.1.2
+fastapi-utils==0.2.1
 fast-api-stats==0.0.4
 # YOLOv5 requirements
 # Usage: pip install -r requirements.txt
